prusti-tests/tests/parse/fail/obligation_arg1.rs
use prusti_contracts::*;

obligation! {
    fn obl(); //~ ERROR the first argument of the function in `obligation!` must be `amount: usize`
}

fn main() {}
